fix alignwide/full for other blocks and rebuild

--- a/public/wp-content/themes/wild-and-without/css/post.scss
+++ b/public/wp-content/themes/wild-and-without/css/post.scss
@@ -208,12 +208,12 @@ ol, ul {
   }
 }
 
-.wp-block-gallery.alignfull {
+.single-post-content .alignfull {
   max-width: none;
   width: auto;
 }
 
-.wp-block-gallery.alignwide {
+.single-post-content .alignwide {
   width: auto;
 }
 //
@@ -227,13 +227,13 @@ ol, ul {
 //}
 //
 @media only screen and (min-width: 768px) {
-  .wp-block-gallery.alignfull {
+  .single-post-content .alignfull {
     margin: 0 calc(50% - 49vw) 16px;
     max-width: 98vw;
     width: 98vw;
   }
 
-  .wp-block-gallery.alignwide {
+  .single-post-content .alignwide {
     width: calc(100% + 30vw);
     position: relative;
     left: -15vw;
